--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,6 +3,8 @@ owner: ariwijayaikd # Your GitHub organization or username, where this repositor
 repo: upptime # The name of this repository
 
 sites:
+  - name: PDDikti Frontpage
+    url: https://pddikti.kemdikbud.go.id
   - name: Google
     url: https://www.google.com
   - name: Wikipedia
